# dive_ai

./: .gitignore  .gitmodules  Makefile  README.md  environment.yml  index.yaml  vllm-0.1.0.tgz  vllm-0.1.1.tgz
.github/workflows/: helm_release.yml
dive_ai/: diveai_provider.py  localai_provider.py  pyproject.toml
helm/local-ai/: Makefile  localai-23b.yaml
test/docs/: b.txt
vllm/: values.yaml
vllm-chart/: Chart.yaml  values.yaml
vllm-chart/templates/: NOTES.txt  netpol.yaml  secret.yaml  serviceaccount.yaml
vllm-image/: Dockerfile  docker_healthcheck.py  initial-condarc
vllm/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  pvc.yaml  service.yaml  statefulset.yaml
